# furigana_keyboard

./: .gitattributes  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  RELEASING.md  SECURITY.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/: dependabot.yml
.github/workflows/: ci.yml
RELEASE_NOTES/: v1.0.0-beta.1.md  v1.0.0-beta.2.md  v1.0.0-beta.3.md  v1.0.0-beta.4.md  v1.0.0-beta.5.md  v1.0.0-beta.6.md  v1.0.0-rc.1.md  v1.0.0-rc.2.md  v1.0.0-rc.3.md  v1.0.0-rc.4.md
about/: PUBLISHING.md  README.md  package-lock.json  package.json
about/.openai/: hosting.json
about/app/: globals.css  i18n.ts  release-links.ts
about/lib/: preferred-locale.ts
about/tests/: rendered-html.test.mjs
about/worker/: index.ts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/cpp/: CMakeLists.txt  native_zinnia.cpp
docs/: context-model.md  conversion-quality-baseline.md  conversion-scoring.md  ime-improvement-qa-matrix.md  reading-dictionary-test-plan.md
fixtures/: context-conversion-nbest.json  conversion-cost.tsv  conversion-nbest.json  ime-improvement-contracts.json  sentence-conversion-regression.json
ios/: README.md  project.yml
ios/Tests/: BunsetsuStateTests.swift  ConversionParityFixtureTests.swift  HandwritingStrokeSegmenterTests.swift  KanaKanjiConverterTests.swift  ReadingRepositoryTests.swift  ReadingUpdateSupportTests.swift  RecognitionCandidateTests.swift  (+2 more)
tools/: build_reading_db.py  check_android_update.py  publish_android_update.py  publish_reading_update.py  reading-data-sources.txt
(+204 files in other folders)
